--- a/Ingos.ServiceForFeatureFlags.Server/Ingos.ServiceForFeatureFlags.Server.csproj
+++ b/Ingos.ServiceForFeatureFlags.Server/Ingos.ServiceForFeatureFlags.Server.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="6.0.36" />
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
             <Version>6.*-*</Version>
         </PackageReference>
