--- a/Ingos.ServiceForFeatureFlags.Server/Properties/launchSettings.json
+++ b/Ingos.ServiceForFeatureFlags.Server/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": true,
+    "anonymousAuthentication": false,
     "iisExpress": {
       "applicationUrl": "http://localhost:21529",
       "sslPort": 44356
